--- a/server/package.json
+++ b/server/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "Node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "ts-node-dev --respawn app.ts",
-    "dev": "nodemon --exec ts-node app.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.3",
-    "@types/node": "^13.9.5",
-    "nodemon": "^2.0.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
-  },
-  "dependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/ejs": "^3.0.2",
-    "@types/express-handlebars": "^3.1.0",
-    "@types/pug": "^2.0.4",
-    "body-parser": "^1.19.0",
-    "ejs": "^3.0.2",
-    "express": "^4.17.1",
-    "express-handlebars": "^4.0.3",
-    "pug": "^2.0.4"
-  }
+    "name": "Node",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": " ts-node-dev --respawn app.ts",
+        "dev": " nodemon --exec ts-node app.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.3",
+        "@types/node": "^13.9.5",
+        "nodemon": "^2.0.2",
+        "ts-node-dev": "^1.0.0-pre.44",
+        "typescript": "^3.8.3"
+    },
+    "dependencies": {
+        "@types/body-parser": "^1.19.0",
+        "@types/ejs": "^3.0.2",
+        "@types/express-handlebars": "^3.1.0",
+        "@types/pug": "^2.0.4",
+        "body-parser": "^1.19.0",
+        "ejs": "^3.0.2",
+        "express": "^4.17.1",
+        "express-handlebars": "^4.0.3",
+        "mysql2": "^2.1.0",
+        "pug": "^2.0.4",
+        "sequelize": "^6.3.3"
+    }
 }
